tests/invalid/module_level_constant_expr/main.py
def run_case() -> None:
    print("unreachable")


1

if __name__ == "__main__":
    run_case()
